# fuzzy-umbrella

./: .env.example  .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
apps/artspace-shared/: Cargo.toml  package.json
apps/artspace-shared/bindings/: WeirdAssName.ts
apps/artspace-shared/src/: lib.rs
apps/backend/: .env.example  .eslintrc.js  drizzle.config.ts  nest-cli.json  package.json  tsconfig.json
apps/backend/migrations/: 0001_fast_the_fallen.sql
apps/backend/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
apps/backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
apps/backend/src/app/: app.controller.spec.ts  app.controller.ts  app.module.ts
apps/backend/src/app/api/: api.module.ts
apps/backend/src/app/api/auth/: auth.module.ts  public.decorator.ts
apps/backend/src/app/api/auth/clerk/: clerk.client.ts  clerk.decorator.ts  clerk.guard.ts  clerk.module.ts  clerk.service.ts  clerk.types.ts
apps/backend/src/app/api/auth/jwt/: jwks.provider.ts  jwt.module.ts
apps/backend/src/app/api/ping/: ping.controller.spec.ts  ping.controller.ts  ping.module.ts  ping.service.ts
apps/backend/src/app/api/posts/: posts.controller.spec.ts  posts.controller.ts  posts.module.ts
apps/backend/src/app/api/user/: user.module.ts
apps/backend/src/app/api/user/profile/: profile.controller.ts  profile.service.ts
apps/backend/src/app/config/: config.module.ts  config.spec.ts  env.provider.ts
apps/backend/src/app/database/: database.module.ts  database.provider.ts  database.spec.ts
apps/backend/src/app/ping/: ping.controller.spec.ts  ping.controller.ts  ping.module.ts  ping.service.ts
apps/backend/src/app/redis/: redis.keys.ts  redis.module.ts  redis.provider.ts
apps/backend/src/app/storage/: storage.module.spec.ts  storage.module.ts  storage.provider.ts  storage.service.ts
apps/backend/src/app/upload/: upload.module.ts  upload.validation.pipe.spec.ts  upload.validation.pipe.ts
apps/backend/src/config/: config.module.ts  config.spec.ts  env.provider.ts
apps/backend/src/database/: database.module.ts  database.provider.ts  database.spec.ts
apps/backend/src/lib/: Cookies.ts  types.ts
apps/backend/src/lib/db/: connection.ts  db.ts  schema.ts
apps/backend/src/ping/: ping.controller.spec.ts  ping.controller.ts  ping.module.ts  ping.service.ts
apps/backend/src/storage/: storage.spec.ts  storage.ts
apps/backend/src/upload/: upload.module.ts  upload.validation.pipe.spec.ts  upload.validation.pipe.ts
apps/backend/test/: app.e2e-spec.ts  ping.e2e-spec.ts
apps/docs/: package.json
apps/docs/app/: layout.tsx  page.tsx
apps/frontend/: .env.example  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1715443620567-68b2c023f1d89.mjs
apps/frontend/app/routes/: _index.tsx  counter.tsx
apps/frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/frontend/src/components/: Container.tsx  FileUploadForm.tsx  FlexContainer.tsx  Navbar.tsx
apps/frontend/src/context/: WebsocketContext.tsx
apps/frontend/src/hooks/: useEvent.ts  usePubSub.ts  usePubSub.tsx  useWebsocket.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/routes/: __root.tsx  _auth.tsx  _layout.tsx  funny.tsx  index.tsx  login.tsx  pubsub_test.tsx  something.tsx  sub.tsx  test.tsx  upload.tsx  ws.tsx  ws_test.tsx
apps/frontend/src/routes/_auth/: chat.tsx  profile.tsx  ws.tsx
apps/frontend/src/shadcn/ui/: toaster.tsx  use-toast.ts
apps/frontend/src/store/: PubSubEventsStore.ts  PubSubSocketStore.ts  WebsocketStore.tsx
apps/lambda-rs/lambda_http_test/: Cargo.toml
apps/lambda-rs/lambda_s3_process/: Cargo.toml
apps/lambda-rs/lambda_s3_process/src/: env.rs  lib.rs  main.rs  utils.rs
apps/lambda-rs/lambda_s3_process/tests/: libsql.rs
apps/lambda-rs/webhook-user-clerk/: Cargo.toml
apps/lambda-rs/webhook-user-clerk/src/: env.rs  lib.rs  main.rs  webhooks.rs
apps/lambda-rs/webhook-user-clerk/src/clerk/: api.rs  mod.rs  schema.rs
apps/lambda-rs/webhook-user-clerk/tests/: pg.rs  turso.rs
apps/serverless/: Cargo.toml  s3-event.json
apps/serverless/fn_http_test/: Cargo.toml
apps/serverless/fn_s3_process/: Cargo.toml
apps/serverless/fn_s3_process/src/: lib.rs  main.rs
apps/serverless/functions/fn_http_test/src/: main.rs
apps/serverless/functions/fn_s3_process/: Cargo.toml
apps/serverless/functions/fn_s3_process/src/: lib.rs  main.rs
apps/serverless/mediathing/: Cargo.toml
apps/serverless/mediathing/src/: lib.rs
apps/serverless/mediathing/src/image_processing/: mod.rs
apps/serverless/mediathing/tests/: image_processing.rs
apps/web/: package.json
apps/web/app/: page.tsx
apps/ws-backend/: Cargo.toml  package.json
apps/ws-backend/.cargo/: config.toml
apps/ws-backend/src/: auth.rs  data.rs  env.rs  jwt.rs  lib.rs  main.rs
apps/ws-backend/src/api/: events.rs
apps/ws-backend/src/api/events/: manager_channel.rs  mod.rs  redis_channel.rs  state.rs  user_channel.rs  user_state.rs  user_subscription.rs
apps/ws-backend/tests/: jwks.rs
assets/: nginx.conf
pulumi/: .gitignore  Pulumi.yaml  index.ts  package-lock.json  package.json  svix.mjs
vercel/: .gitignore  Cargo.toml  vercel.json
vercel/api/: ping.rs
vercel/api/webhooks/: clerk.rs  create.user.rs  user.created.rs  user.updated.rs
vercel/public/: index.html
vercel/src/: db.rs  env.rs  lib.rs
