[workspace]
resolver = '2'
members = [
    "apps/lambda-rs/*",
    "apps/ws-backend",
    "packages/artspace-core-rs",
    "packages/artspace-shared",
]

[workspace.dependencies]
#General
anyhow = { version = "1.0.82" }
strum = { version = "0.26.2", features = ["derive"] }

structmap = { version = "0.1.6" }
structmap-derive = { version = "0.1.6" }

#DB
libsql = { version = "0.3.3" }

#Logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
#Async
tokio = { version = "1", features = ["macros"] }
rayon = { version = "1.10.0" }

#Serde
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = { version = "1.0.115" }

# Lambda
lambda_http = { version = "0.11.1" }
lambda_runtime = { version = "0.11.1" }

#AWS
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.23.0" }
aws_lambda_events = { version = "0.15.0", default-features = false }

#fn_s3_proc
image = { version = "0.25.1" }

redis = { version = "0.25.3", features = ["tokio-comp"] }
redis-macros = { version = "0.3.0" }


#webhook_clerk
svix = { version = "1.21.0", features = ["rustls-tls"] }

clerk-rs = { version = "0.2.3" }
