[package]
name = "mediathing-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.1" }
svix = "1.21.0"
libsql = "0.3.3"
serde = "1.0.197"


# You can specify a library for shared logic here (optional)
[lib]
path = "src/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "ping"
path = "api/ping.rs"

[[bin]]
name = "user_created"
path = "api/webhooks/user.created.rs"

[[bin]]
name = "user_updated"
path = "api/webhooks/user.updated.rs"
