[package]
name = "artspace-shared"
description = "Shared type definitions for Artspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["serde_derive"] }
serde_json = { version = "1.0.116" }
ts-rs = { version = "8.1.0", features = ["serde-compat"] }
