[package]
name = "mediathing-serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = '2'
members = ["functions/*", "mediathing"]

[workspace.dependencies]

#General
anyhow = { version = "1.0.82" }
strum = { version = "0.26.2", features = ["derive"] }


#Async
tokio = { version = "1", features = ["macros"] }
rayon = { version = "1.10.0" }
async-trait = { version = "0.1.80" }

#Serde
serde = { version = "1.0.197" }
serde_json = { version = "1.0.115" }

# Lambda
lambda_http = { version = "0.11.1" }
lambda_runtime = { version = "0.11.1" }

#AWS
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.23.0" }
aws_lambda_events = { version = "0.15.0", default-features = false }

#fn_s3_proc
image = { version = "0.25.1" }
