[package]
name = "ws-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
artspace_core = { path = "../../packages/artspace-core-rs" }
artspace_shared = { path = "../../packages/artspace-shared" }

anyhow = { workspace = true }
tokio = { workspace = true }

rocket = { version = "0.5.0" }
rocket_cors = { version = "0.6.0" }
rocket_ws = { version = "0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

reqwest = { version = "0.12.4", features = ["json"] }
jsonwebtoken = { version = "9.3.0" }
