[package]
name = "lambda_s3_process"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.


[dependencies]
artspace_core = { path = "../../../packages/artspace-core-rs" }
artspace_shared = { path = "../../../packages/artspace-shared" }

anyhow = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }

strum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

#TURSO
libsql = { workspace = true }

#AWS 
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true, features = ["s3"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

redis = { workspace = true }
redis-macros = { workspace = true }

# [dev-dependencies]
# tokio = { workspace = true, features = ['full', 'test-util'] }
