[package]
name = "webhook-user-clerk"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
artspace_core = { path = "../../../packages/artspace-core-rs" }
artspace_shared = { path = "../../../packages/artspace-shared" }

tokio = { workspace = true }
lambda_http = { workspace = true }

clerk-rs = { workspace = true }
svix = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

libsql = { workspace = true }

strum = { workspace = true }
